--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.7",
+    "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "react": "^18",
